[package]
name = "blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenv = "0.15"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4.41", features = ["unstable-locales"]}
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
actix-web-httpauth = "0.8.2"
env_logger = "0.11.8"
futures = "0.3.31"
